# sentimentAnalysis

./: .gitignore  README.md  __init__.py  docker-compose.yml
backend/: .dockerignore  Dockerfile  __init__.py  main.py  pyproject.toml
backend/api/: __init__.py  routes.py
backend/models/: schemas.py
backend/services/: __init__.py  ml_service.py  news_service.py  stock_service.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx
